fix: overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -124,7 +124,7 @@
   }
    html,
   body {
-    @apply bg-background text-foreground overflow-auto cursor-none;
+    @apply bg-background text-foreground overflow-auto cursor-none overscroll-none ;
 
     -ms-overflow-style: none;     
     scrollbar-width: none;        
